@@ -1,13 +1,13 @@
 jQuery.namespace("AMG.jhz");
-AMG.jhz.init = function (args) {
+AMG.jhz.init = function (params) {
     var gadget = AJS.Gadget({
-        baseUrl: args.baseUrl,
+        baseUrl: params.baseUrl,
         useOauth: "/rest/gadget/1.0/currentUser",
         config: {
             descriptor: function (args) {
                 var gadget = this;
                 var searchParam;
-                if (/^jql-/.test(this.getPref("Project")) || this.getPref("isPopup") === "true"){
+                if (/^jql-/.test(this.getPref("Project")) || this.getPref("isPopup") === "true") {
                     searchParam =
                     {
                         userpref: "projectOrFilterId",
@@ -15,8 +15,8 @@ AMG.jhz.init = function (args) {
                         value: gadgets.util.unescapeString(gadget.getPref("Project"))
                     };
                 }
-                else{
-                    searchParam = AJS.gadget.fields.projectOrFilterPicker(gadget,"Project");
+                else {
+                    searchParam = AJS.gadget.fields.projectOrFilterPicker(gadget, "Project");
                 }
                 return {
                     theme: "long-label",
@@ -28,11 +28,11 @@ AMG.jhz.init = function (args) {
                         }),
                         {
                             userpref: "Issues",
-                            "class": "numField",
-                            value: gadget.getPref("Issues"),
+                            selected: gadget.getPref("Issues"),
                             label: gadget.getMsg("issues.history.gadget.field.issue.label"),
                             description: gadget.getMsg("issues.history.gadget.field.issue.description"),
-                            type: "text"
+                            type: "multiselect",
+                            options: args.statuses.statuses
                         },
                         {
                             userpref: "Period",
@@ -72,7 +72,7 @@ AMG.jhz.init = function (args) {
                             userpref: "Date",
                             label: gadget.getMsg("issues.history.gadget.field.date.label"),
                             type: "callbackBuilder",
-                            callback: function(parentDiv){
+                            callback: function (parentDiv) {
                                 parentDiv.append(
                                     AJS.$("<input/>").attr({
                                         id: "date-picker",
@@ -94,14 +94,14 @@ AMG.jhz.init = function (args) {
                                     }).text(gadget.getMsg("issues.history.gadget.field.date.description"))
                                 );
                                 Calendar.setup({
-                                    firstDay : 1,
-                                    inputField : 'date-picker',
-                                    button : 'date-picker-button',
-                                    align : 'Br',
-                                    singleClick : true,
-                                    showsTime : true,
-                                    useISO8601WeekNumbers : false,
-                                    ifFormat : '%Y-%m-%d'
+                                    firstDay: 1,
+                                    inputField: 'date-picker',
+                                    button: 'date-picker-button',
+                                    align: 'Br',
+                                    singleClick: true,
+                                    showsTime: true,
+                                    useISO8601WeekNumbers: false,
+                                    ifFormat: '%Y-%m-%d'
                                 });
                             }
                         },
@@ -128,9 +128,12 @@ AMG.jhz.init = function (args) {
                         },
                         AJS.gadget.fields.nowConfigured()
                     ]
-
                 }
-            }
+            },
+            args: [{
+                key: "statuses",
+                ajaxOptions: "/rest/issueshistoryresource/1.0/issues/statuses.json"
+            }]
         },
         view: {
             enableReload: true,
@@ -174,13 +177,13 @@ AMG.jhz.init = function (args) {
                 });
                 mainDiv.append(requestedIssueList);
                 mainDiv.append(
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.project.label")+gadget.getPref("Project")),
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.issue.label")+gadget.getPref("Issues")),
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.period.label")+gadget.getPref("Period")),
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.previously.label")+gadget.getPref("Previously")),
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.date.label")+gadget.getPref("Date")),
-                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.version.label")+gadget.getPref("Version")),
-                    AJS.$("<h1/>").text(gadget.getMsg("gadget.common.refresh.label")+gadget.getPref("refresh"))
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.project.label") + gadget.getPref("Project")),
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.issue.label") + gadget.getPref("Issues")),
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.period.label") + gadget.getPref("Period")),
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.previously.label") + gadget.getPref("Previously")),
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.date.label") + gadget.getPref("Date")),
+                    AJS.$("<h1/>").text(gadget.getMsg("issues.history.gadget.field.version.label") + gadget.getPref("Version")),
+                    AJS.$("<h1/>").text(gadget.getMsg("gadget.common.refresh.label") + gadget.getPref("refresh"))
                 );
                 gadget.getView().html(mainDiv);
             },
