@@ -21,3 +21,4 @@
 - PIP-99 Poprawienie tytułu i dodanie opisu dla pola
 - PIP-100 Dodanie walidacji na połączone pole Data i Poprzednie dni + usunięcie linku do nikąd z tytułu gadżetu
 - PIP-63 Utworzono serwis wyszukujący
+- PIP-75 Utworzono pole multiselect zawierające statusy
